added home section

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        
+
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
@@ -24,5 +24,20 @@
             <a href="#" class="btn btn-white btn-animated">Discover our Tour</a>
         </div>
     </header>
+    <main>
+        <section class="section-about">
+            <div class="u-text-center">
+                <h2 class="heading-secondary">Exciting Tours for adventurous people</h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-2 u-text-center">
+                    text
+                </div>
+                <div class="col-1-of-2 u-text-center">
+                    images
+                </div>
+            </div>
+        </section>
+    </main>
     </body>
 </html>
