--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -27,7 +27,7 @@
     <main>
         <section class="section-about">
             <div class="u-text-center">
-                <h2 class="heading-secondary">Exciting Tours for adventurous people</h2>
+                <h2 class="heading-secondary u-margin-bottom-5">Exciting Tours for adventurous people</h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2 u-text-center">
