--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -27,11 +27,19 @@
     <main>
         <section class="section-about">
             <div class="u-text-center">
-                <h2 class="heading-secondary u-margin-bottom-5">Exciting Tours for adventurous people</h2>
+                <h2 class="heading-secondary u-margin-bottom-big">Exciting Tours for adventurous people</h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2 u-text-center">
-                    text
+                    <h3 class="tertiary-heading u-margin-bottom-small">You'r going to fall in love with nature</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur at cum, deleniti dolorem esse et excepturi facilis fugit ipsa iure laborum neque nostrum sunt tempore ullam ut voluptatum. Ea, recusandae.
+                    </p>
+                    <h3 class="tertiary-heading u-margin-bottom-small">Like adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur at cum, deleniti dolorem esse et excepturi facilis fugit ipsa iure laborum neque nostrum sunt tempore ullam ut voluptatum. Ea, recusandae.
+                    </p>
+                    <a href="#" alt="learn more" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2 u-text-center">
                     images
